Fix for avatar spacing

--- a/web/css/_avatars.scss
+++ b/web/css/_avatars.scss
@@ -26,6 +26,6 @@
 	padding: 0;
 	margin: 0 .25em 0 .125em;
 }
-.posts-link picture:first-child .z-avatar {
+.posts-link .z-avatar-first {
 	margin-left: 0;
 }
